add streamlit app

--- a/test_clustering.ipynb
+++ b/test_clustering.ipynb
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Placas_Neltur.csv')"
+    "data = pd.read_csv('Data/Placas_Neltur.csv')"
    ]
   },
   {
